--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^2.1.2",
     "hexo": "^3.2.0",
+    "hexo-baidu-url-submit": "0.0.5",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-sitemap": "^1.1.2",
